# HockeyAI

./: .gitignore  Dockerfile  LICENSE  README.md  hockeyai.sbatch  plot_time.ipynb  pyproject.toml  ruff.toml  timings.txt
report/: conclusion.tex  introduction.tex  main.bib  main.tex  settings.sty
report/Algorithms/: ddpg_sac.tex  exp_ddpg_sac.tex  exp_rainbow_naf.tex  exp_tdmpc.tex  rainbow_NAF.tex  tdmpc.tex
src/: sac_hockey_rewards_tensorboard.json  sac_hockey_tensorboard.json  visualize_alpha.ipynb  visualize_tensorboard.ipynb
src/agents/: DDPG.py  DQL.py  __init__.py  agent.py  ddpg.py  dql.py  dreamer.py  ppo.py  rainbow.py  rainbow_naf.py  sac.py  tdmpc.py  tdmpc_bcl.py
src/configs/: config.yaml  config_eval.yaml  rainbow_hockey_client.yaml  sac_hockey_client.yaml  tdmpc_bcl_hockey_client.yaml  tdmpc_hockey_client.yaml
src/configs/agent/: ddpg.yaml  ddpg.yml  default.yaml  dql.yaml  dreamer.yaml  ppo.yaml  rainbow-binned.yaml  rainbow-naf.yaml  rainbow.yaml  sac.yaml  tdmpc.yaml  tdmpc_bcl.yaml
src/configs/env/: default.yaml  hockey-vs-agent.yaml  hockey-vs-basic.yaml  hockey-vs-ddpg.yaml  hockey-vs-naf.yaml  hockey-vs-rain.yaml  hockey-vs-rainbow.yaml  hockey-vs-sac.yaml  hockey-vs-tdmpc.yaml  hockey.yaml
src/configs/eval/: ddpg.yaml  ddpg_hockey_bot.yaml  ddpg_hockey_self.yaml  hockey_bot.yaml  hockey_bot_comp.yaml  hockey_naf.yaml  (+15 more)
src/scripts/: evaluate.py  plotting.ipynb  plotting.py  requirements.txt  run_client.py  train.py  train2.py
src/utils/: __init__.py  helper.py  models.py  networks.py  noise.py  replay.py  segment_tree.py  visuals.py
(+54 files in other folders)
