[tool.poetry]
name = "hockeyai"
version = "0.1.0"
description = ""
authors = ["Xploeng <julius@harald-rau.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^1.0.0"
hockey = {git = "https://github.com/martius-lab/hockey-env.git", develop = true}
numpy = "^2.2.0"
hydra-core = "^1.3.2"
matplotlib = "^3.10.0"
torch = "^2.2.0"
tensorboard = "^2.18.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.8.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
